[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Paddles.gd" type="Script" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ball.gd" type="Script" id=6]
[ext_resource path="res://World.gd" type="Script" id=7]
[ext_resource path="res://sounds/fx-pong theme v1.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/fx-pong goal v1.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/fx-pong ball hit v1.ogg" type="AudioStream" id=10]
[ext_resource path="res://theme.tres" type="Theme" id=11]

[sub_resource type="DynamicFont" id=6]
size = 72
font_data = ExtResource( 1 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="Decoration" type="CanvasLayer" parent="."]

[node name="BG" type="ColorRect" parent="Decoration"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Divider" type="ColorRect" parent="Decoration"]
anchor_left = 0.495
anchor_top = 0.02
anchor_right = 0.505
anchor_bottom = 0.98
grow_horizontal = 0
grow_vertical = 0
color = Color( 0.360784, 0.360784, 0.360784, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreL" type="Label" parent="Decoration"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -448.0
margin_top = 16.0
margin_right = -20.0
margin_bottom = 112.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "-"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreR" type="Label" parent="Decoration"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 16.0
margin_right = 444.0
margin_bottom = 112.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "-"
__meta__ = {
"_edit_lock_": true
}

[node name="Physics" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="PaddleLeft" parent="Physics" instance=ExtResource( 2 )]
visible = false
position = Vector2( 30, 320 )
scale = Vector2( 6, 6 )
z_index = 1

[node name="PaddleRight" parent="Physics" instance=ExtResource( 2 )]
visible = false
position = Vector2( 994, 320 )
scale = Vector2( 6, 6 )
z_index = 1

[node name="WallUp" parent="Physics" instance=ExtResource( 4 )]
position = Vector2( 512, 15 )
scale = Vector2( 31, 0.5 )

[node name="WallDown" parent="Physics" instance=ExtResource( 4 )]
position = Vector2( 512, 585 )
scale = Vector2( 31, 0.5 )

[node name="Ball" parent="Physics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 512, 300 )
script = ExtResource( 6 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -158.0
margin_right = 217.0
margin_bottom = 158.0

[node name="Menu" type="VBoxContainer" parent="Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -151.0
margin_right = 207.0
margin_bottom = 151.0
theme = ExtResource( 11 )

[node name="Title" type="Label" parent="Menu/Panel/Menu"]
margin_right = 414.0
margin_bottom = 41.0
theme = ExtResource( 11 )
text = "- SPEZI PONG -"
align = 1

[node name="ButtonStart" type="Button" parent="Menu/Panel/Menu"]
margin_top = 45.0
margin_right = 414.0
margin_bottom = 92.0
theme = ExtResource( 11 )
text = "Start/Resume"

[node name="ButtonReset" type="Button" parent="Menu/Panel/Menu"]
margin_top = 96.0
margin_right = 414.0
margin_bottom = 143.0
theme = ExtResource( 11 )
text = "Reset Score"

[node name="AI" type="HBoxContainer" parent="Menu/Panel/Menu"]
margin_top = 147.0
margin_right = 414.0
margin_bottom = 198.0

[node name="CheckOnePlayer" type="CheckBox" parent="Menu/Panel/Menu/AI"]
margin_right = 240.0
margin_bottom = 51.0
size_flags_horizontal = 3
theme = ExtResource( 11 )
text = "AI Player"

[node name="LvLabel" type="Label" parent="Menu/Panel/Menu/AI"]
margin_left = 244.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Lv."

[node name="Level" type="SpinBox" parent="Menu/Panel/Menu/AI"]
margin_left = 304.0
margin_right = 414.0
margin_bottom = 51.0
theme = ExtResource( 11 )
max_value = 9.0

[node name="CheckMusic" type="CheckBox" parent="Menu/Panel/Menu"]
margin_top = 202.0
margin_right = 414.0
margin_bottom = 251.0
theme = ExtResource( 11 )
text = "Music"

[node name="CheckFX" type="CheckBox" parent="Menu/Panel/Menu"]
margin_top = 255.0
margin_right = 414.0
margin_bottom = 304.0
theme = ExtResource( 11 )
text = "Effects"

[node name="Label" type="Label" parent="Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -170.0
margin_right = 454.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
text = "ESC = menu
w/s = left player
up/down = right player"

[node name="Sounds" type="Node" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
bus = "Music"

[node name="BallHit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
bus = "FX"

[node name="Goal" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
bus = "FX"

[connection signal="area_entered" from="Physics/PaddleLeft" to="Physics/Ball" method="_on_PaddleLeft_area_entered"]
[connection signal="area_entered" from="Physics/PaddleRight" to="Physics/Ball" method="_on_PaddleRight_area_entered"]
[connection signal="area_entered" from="Physics/WallUp" to="Physics/Ball" method="_on_WallUp_area_entered"]
[connection signal="area_entered" from="Physics/WallDown" to="Physics/Ball" method="_on_WallDown_area_entered"]
[connection signal="ball_hit" from="Physics/Ball" to="." method="_on_Ball_ball_hit"]
[connection signal="score" from="Physics/Ball" to="." method="_on_Ball_score"]
[connection signal="button_up" from="Menu/Panel/Menu/ButtonStart" to="." method="_on_ButtonStart_button_up"]
[connection signal="button_up" from="Menu/Panel/Menu/ButtonReset" to="." method="_on_ButtonReset_button_up"]
[connection signal="toggled" from="Menu/Panel/Menu/AI/CheckOnePlayer" to="." method="_on_CheckOnePlayer_toggled"]
[connection signal="value_changed" from="Menu/Panel/Menu/AI/Level" to="." method="_on_Level_value_changed"]
[connection signal="toggled" from="Menu/Panel/Menu/CheckMusic" to="." method="_on_CheckMusic_toggled"]
[connection signal="toggled" from="Menu/Panel/Menu/CheckFX" to="." method="_on_CheckFX_toggled"]
